--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <!-- Link ke bagian map -->
                     <a href="#map">Lihat Peta</a>
                     <!-- Google Maps Embed -->
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.576497214982!2d106.82266851430937!3d-6.227760295480049!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6a02f65a9f6f77%3A0x7deebc7df51f5869!2sMonas!5e0!3m2!1sen!2sid!4v1646258107414!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15844.613885573883!2d107.5737725!3d-6.8722074!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e420abc30acf%3A0x10569255865460a5!2sPoliteknik%20Negeri%20Bandung!5e0!3m2!1sen!2sid!4v1709820280897!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </section>
         </div>
