--- a/index.html
+++ b/index.html
@@ -136,6 +136,9 @@
     </main>
     <footer class="box">
         Amadeus, Di depan Laptop 27 Februari 2024
+        <a href="https://github.com/Mazdeus" target="_blank">
+            <img src="img/github_logo.png" alt="GitHub" style="width: 30px; height: 30px; margin-left: 10px;">
+        </a>
     </footer>
     <script src="js/main.js"></script>
 </body>
