--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@
                 <h2>Map</h2>
                 <div class="map-container">
                     <a href="#map">Lihat Peta</a>
-                    <!-- Google Maps Embed -->
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15844.613885573883!2d107.5737725!3d-6.8722074!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e420abc30acf%3A0x10569255865460a5!2sPoliteknik%20Negeri%20Bandung!5e0!3m2!1sen!2sid!4v1709820280897!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15844.613885573883!2d107.5737725!3d-6.8722074!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e420abc30acf%3A0x10569255865460a5!2sPoliteknik%20Negeri%20Bandung!5e0!3m2!1sen!2sid!4v1709820280897!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Peta Lokasi Politeknik Negeri Bandung></iframe>
                 </div>
             </section>
         </div>
