--- a/index.html
+++ b/index.html
@@ -106,6 +106,36 @@
         unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
         }
     </style>
+
+    <!--Import Library JQuery-->
+    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+
+    <!-- Kode JavaScript -->
+    <script type="text/javascript">
+        $(function(){
+            <!--Mengambil data dari file headline.json-->
+            $.get('headline.json',function(obj){
+                //tag tabel awal
+                var str="<table border=1>";
+                //judul table
+                str+="<tr><td>No</td><td>Judul Headline</td><td>Kategori</td><td>Waktu Publish</td><td>Waktu Pengambilan Data</td></tr>";
+                //looping data headline dengan fungsi $.each() Jquery
+                $.each(obj,function(n,data){
+                    //isi tabel
+                    str+="<tr><td>"+(n+1)+"</td>";
+                    str+="<td>"+data.judul+"</td>";
+                    str+="<td>"+data.kategori+"</td>";
+                    str+="<td>"+data.publish_time+"</td>";
+                    str+="<td>"+data.scraping_time+"</td></tr>";
+                });
+                //tag tabel penutup
+                str+="</table>";
+                //Display semua headline ke html dgn id=media
+                $('#headline_json').html(str);
+            });
+        });
+    </script>
+
 </head>
 <body>
     <header>
@@ -128,6 +158,7 @@
                 <li><a href="#galeri">Galeri</a></li>
                 <li><a href="#video">Video</a></li>
                 <li><a href="#map">Map</a></li>
+                <li><a href="#scrap">Scraping</a></li>
             </ul>
         </nav>
     </header>
@@ -223,15 +254,20 @@
                     </video>
                 </div>
             </section>
+            <section id="scrap" class="box">
+                <h1> Scraping Data Republika Online </h1>
+                <div id="headline_json"></div>
+            </section>
             <section id="map" class="box">
                 <h2>Map</h2>
                 <div class="map-container">
                     <a href="#map">Lihat Peta</a>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15844.613885573883!2d107.5737725!3d-6.8722074!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e420abc30acf%3A0x10569255865460a5!2sPoliteknik%20Negeri%20Bandung!5e0!3m2!1sen!2sid!4v1709820280897!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"title="Peta Lokasi Politeknik Negeri Bandung></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15844.613885573883!2d107.5737725!3d-6.8722074!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e420abc30acf%3A0x10569255865460a5!2sPoliteknik%20Negeri%20Bandung!5e0!3m2!1sen!2sid!4v1709820280897!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Peta Lokasi Politeknik Negeri Bandung"></iframe>
                 </div>
             </section>
         </div>
     </main>
+
     <footer class="box">
         Amadeus, Di depan Laptop 27 Februari 2024
         <a href="https://github.com/Mazdeus" target="_blank">
