Update Scraping Data I

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <li><a href="#galeri">Galeri</a></li>
                 <li><a href="#video">Video</a></li>
                 <li><a href="#map">Map</a></li>
-                <li><a href="#scrap">Scraping</a></li>
+                <li><a href="#scrap">DATA SCRAPING I</a></li>
             </ul>
         </nav>
     </header>
@@ -262,7 +262,7 @@
                 </div>
             </section>
             <section id="scrap" class="box">
-                <h1> Scraping Data Republika Online </h1>
+                <h1> DATA SCRAPING I </h1>
                 <div id="headline_json"></div>
             </section>
         </div>
